--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.30.0",
     "react-multi-carousel": "^2.8.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
